Fix CreateFile (#9)
